"Fixed" the gap at the bottom

--- a/public/css/main-new.css
+++ b/public/css/main-new.css
@@ -44,13 +44,13 @@ h3{
     font-family: Avenir Next Bold;
 }
 h4{
-    font-size: 2.3em;
+    font-size: 2.4em;
 }
 h5{
     font-size: 1.5em;
 }
 p {
-    font-size: 1.2em;
+    font-size: 1.4em;
     line-height: 1.4em;
 }
 
@@ -342,6 +342,8 @@ Courtesy of https://codepen.io/2xsamurai/pen/WwmjKQ*/
     /*border: solid 1px black;*/
     border-radius: 10px;
     text-align: left;
+
+    transition: all 0.3s;
 }
 .competition h1 {
     font-size: 1.8em;
@@ -840,6 +842,10 @@ Courtesy of https://codepen.io/2xsamurai/pen/WwmjKQ*/
         -moz-transform: scale(1.2); /* Firefox */
         -webkit-transform: scale(1.2); /* Safari and Chrome */
         -o-transform: scale(1.2); /* Opera */
+    }
+
+    .competition:hover {
+        transform: scale(1.02);
     }
 }
 
